// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forecast for locale, day and utc offset renders WeatherBlock correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <WeatherBlock
    data={
      Array [
        Object {
          "clouds": Object {
            "all": 14,
          },
          "dt": 1593118800,
          "dt_txt": "2020-06-25 21:00:00",
          "main": Object {
            "feels_like": 291.01,
            "grnd_level": 958,
            "humidity": 75,
            "pressure": 1018,
            "sea_level": 1018,
            "temp": 290.7,
            "temp_kf": 3.18,
            "temp_max": 290.7,
            "temp_min": 287.52,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "few clouds",
              "icon": "02n",
              "id": 801,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 132,
            "speed": 0.92,
          },
        },
      ]
    }
    day={1593036000}
    isSelected={true}
    utcOffset={7200}
  >
    <div
      className="makeStyles-container-1 makeStyles-containerSelected-10"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-date-11"
      >
        <ForwardRef(Typography)
          className="makeStyles-date-11"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
        >
          <p
            className="MuiTypography-root makeStyles-date-11 MuiTypography-body1"
          >
            25/06/2020
          </p>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-temperature-2"
        id="temperature-text"
      >
        <ForwardRef(Typography)
          className="makeStyles-temperature-2"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
          id="temperature-text"
        >
          <p
            className="MuiTypography-root makeStyles-temperature-2 MuiTypography-body1"
            id="temperature-text"
          >
            18
             °
            C
          </p>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
      <div>
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-feelsLikeHeader-8"
        >
          <ForwardRef(Typography)
            className="makeStyles-feelsLikeHeader-8"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter",
                "alignJustify": "MuiTypography-alignJustify",
                "alignLeft": "MuiTypography-alignLeft",
                "alignRight": "MuiTypography-alignRight",
                "body1": "MuiTypography-body1",
                "body2": "MuiTypography-body2",
                "button": "MuiTypography-button",
                "caption": "MuiTypography-caption",
                "colorError": "MuiTypography-colorError",
                "colorInherit": "MuiTypography-colorInherit",
                "colorPrimary": "MuiTypography-colorPrimary",
                "colorSecondary": "MuiTypography-colorSecondary",
                "colorTextPrimary": "MuiTypography-colorTextPrimary",
                "colorTextSecondary": "MuiTypography-colorTextSecondary",
                "displayBlock": "MuiTypography-displayBlock",
                "displayInline": "MuiTypography-displayInline",
                "gutterBottom": "MuiTypography-gutterBottom",
                "h1": "MuiTypography-h1",
                "h2": "MuiTypography-h2",
                "h3": "MuiTypography-h3",
                "h4": "MuiTypography-h4",
                "h5": "MuiTypography-h5",
                "h6": "MuiTypography-h6",
                "noWrap": "MuiTypography-noWrap",
                "overline": "MuiTypography-overline",
                "paragraph": "MuiTypography-paragraph",
                "root": "MuiTypography-root",
                "srOnly": "MuiTypography-srOnly",
                "subtitle1": "MuiTypography-subtitle1",
                "subtitle2": "MuiTypography-subtitle2",
              }
            }
          >
            <p
              className="MuiTypography-root makeStyles-feelsLikeHeader-8 MuiTypography-body1"
            >
              feelsLike
            </p>
          </ForwardRef(Typography)>
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-feelsLike-9"
        >
          <ForwardRef(Typography)
            className="makeStyles-feelsLike-9"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter",
                "alignJustify": "MuiTypography-alignJustify",
                "alignLeft": "MuiTypography-alignLeft",
                "alignRight": "MuiTypography-alignRight",
                "body1": "MuiTypography-body1",
                "body2": "MuiTypography-body2",
                "button": "MuiTypography-button",
                "caption": "MuiTypography-caption",
                "colorError": "MuiTypography-colorError",
                "colorInherit": "MuiTypography-colorInherit",
                "colorPrimary": "MuiTypography-colorPrimary",
                "colorSecondary": "MuiTypography-colorSecondary",
                "colorTextPrimary": "MuiTypography-colorTextPrimary",
                "colorTextSecondary": "MuiTypography-colorTextSecondary",
                "displayBlock": "MuiTypography-displayBlock",
                "displayInline": "MuiTypography-displayInline",
                "gutterBottom": "MuiTypography-gutterBottom",
                "h1": "MuiTypography-h1",
                "h2": "MuiTypography-h2",
                "h3": "MuiTypography-h3",
                "h4": "MuiTypography-h4",
                "h5": "MuiTypography-h5",
                "h6": "MuiTypography-h6",
                "noWrap": "MuiTypography-noWrap",
                "overline": "MuiTypography-overline",
                "paragraph": "MuiTypography-paragraph",
                "root": "MuiTypography-root",
                "srOnly": "MuiTypography-srOnly",
                "subtitle1": "MuiTypography-subtitle1",
                "subtitle2": "MuiTypography-subtitle2",
              }
            }
          >
            <p
              className="MuiTypography-root makeStyles-feelsLike-9 MuiTypography-body1"
            >
              18
               °
              C
            </p>
          </ForwardRef(Typography)>
        </WithStyles(ForwardRef(Typography))>
      </div>
      <div
        className="makeStyles-additionalInfo-6"
      >
        <div
          className="makeStyles-additionalInfoContainer-5"
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-additionalInfoHeader-4"
          >
            <ForwardRef(Typography)
              className="makeStyles-additionalInfoHeader-4"
              classes={
                Object {
                  "alignCenter": "MuiTypography-alignCenter",
                  "alignJustify": "MuiTypography-alignJustify",
                  "alignLeft": "MuiTypography-alignLeft",
                  "alignRight": "MuiTypography-alignRight",
                  "body1": "MuiTypography-body1",
                  "body2": "MuiTypography-body2",
                  "button": "MuiTypography-button",
                  "caption": "MuiTypography-caption",
                  "colorError": "MuiTypography-colorError",
                  "colorInherit": "MuiTypography-colorInherit",
                  "colorPrimary": "MuiTypography-colorPrimary",
                  "colorSecondary": "MuiTypography-colorSecondary",
                  "colorTextPrimary": "MuiTypography-colorTextPrimary",
                  "colorTextSecondary": "MuiTypography-colorTextSecondary",
                  "displayBlock": "MuiTypography-displayBlock",
                  "displayInline": "MuiTypography-displayInline",
                  "gutterBottom": "MuiTypography-gutterBottom",
                  "h1": "MuiTypography-h1",
                  "h2": "MuiTypography-h2",
                  "h3": "MuiTypography-h3",
                  "h4": "MuiTypography-h4",
                  "h5": "MuiTypography-h5",
                  "h6": "MuiTypography-h6",
                  "noWrap": "MuiTypography-noWrap",
                  "overline": "MuiTypography-overline",
                  "paragraph": "MuiTypography-paragraph",
                  "root": "MuiTypography-root",
                  "srOnly": "MuiTypography-srOnly",
                  "subtitle1": "MuiTypography-subtitle1",
                  "subtitle2": "MuiTypography-subtitle2",
                }
              }
            >
              <p
                className="MuiTypography-root makeStyles-additionalInfoHeader-4 MuiTypography-body1"
              >
                humidity
              </p>
            </ForwardRef(Typography)>
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-additionalInfoText-3"
          >
            <ForwardRef(Typography)
              className="makeStyles-additionalInfoText-3"
              classes={
                Object {
                  "alignCenter": "MuiTypography-alignCenter",
                  "alignJustify": "MuiTypography-alignJustify",
                  "alignLeft": "MuiTypography-alignLeft",
                  "alignRight": "MuiTypography-alignRight",
                  "body1": "MuiTypography-body1",
                  "body2": "MuiTypography-body2",
                  "button": "MuiTypography-button",
                  "caption": "MuiTypography-caption",
                  "colorError": "MuiTypography-colorError",
                  "colorInherit": "MuiTypography-colorInherit",
                  "colorPrimary": "MuiTypography-colorPrimary",
                  "colorSecondary": "MuiTypography-colorSecondary",
                  "colorTextPrimary": "MuiTypography-colorTextPrimary",
                  "colorTextSecondary": "MuiTypography-colorTextSecondary",
                  "displayBlock": "MuiTypography-displayBlock",
                  "displayInline": "MuiTypography-displayInline",
                  "gutterBottom": "MuiTypography-gutterBottom",
                  "h1": "MuiTypography-h1",
                  "h2": "MuiTypography-h2",
                  "h3": "MuiTypography-h3",
                  "h4": "MuiTypography-h4",
                  "h5": "MuiTypography-h5",
                  "h6": "MuiTypography-h6",
                  "noWrap": "MuiTypography-noWrap",
                  "overline": "MuiTypography-overline",
                  "paragraph": "MuiTypography-paragraph",
                  "root": "MuiTypography-root",
                  "srOnly": "MuiTypography-srOnly",
                  "subtitle1": "MuiTypography-subtitle1",
                  "subtitle2": "MuiTypography-subtitle2",
                }
              }
            >
              <p
                className="MuiTypography-root makeStyles-additionalInfoText-3 MuiTypography-body1"
              >
                75
                %
              </p>
            </ForwardRef(Typography)>
          </WithStyles(ForwardRef(Typography))>
        </div>
        <div
          className="makeStyles-additionalInfoContainer-5"
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-additionalInfoHeader-4"
          >
            <ForwardRef(Typography)
              className="makeStyles-additionalInfoHeader-4"
              classes={
                Object {
                  "alignCenter": "MuiTypography-alignCenter",
                  "alignJustify": "MuiTypography-alignJustify",
                  "alignLeft": "MuiTypography-alignLeft",
                  "alignRight": "MuiTypography-alignRight",
                  "body1": "MuiTypography-body1",
                  "body2": "MuiTypography-body2",
                  "button": "MuiTypography-button",
                  "caption": "MuiTypography-caption",
                  "colorError": "MuiTypography-colorError",
                  "colorInherit": "MuiTypography-colorInherit",
                  "colorPrimary": "MuiTypography-colorPrimary",
                  "colorSecondary": "MuiTypography-colorSecondary",
                  "colorTextPrimary": "MuiTypography-colorTextPrimary",
                  "colorTextSecondary": "MuiTypography-colorTextSecondary",
                  "displayBlock": "MuiTypography-displayBlock",
                  "displayInline": "MuiTypography-displayInline",
                  "gutterBottom": "MuiTypography-gutterBottom",
                  "h1": "MuiTypography-h1",
                  "h2": "MuiTypography-h2",
                  "h3": "MuiTypography-h3",
                  "h4": "MuiTypography-h4",
                  "h5": "MuiTypography-h5",
                  "h6": "MuiTypography-h6",
                  "noWrap": "MuiTypography-noWrap",
                  "overline": "MuiTypography-overline",
                  "paragraph": "MuiTypography-paragraph",
                  "root": "MuiTypography-root",
                  "srOnly": "MuiTypography-srOnly",
                  "subtitle1": "MuiTypography-subtitle1",
                  "subtitle2": "MuiTypography-subtitle2",
                }
              }
            >
              <p
                className="MuiTypography-root makeStyles-additionalInfoHeader-4 MuiTypography-body1"
              >
                pressure
              </p>
            </ForwardRef(Typography)>
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-additionalInfoText-3"
          >
            <ForwardRef(Typography)
              className="makeStyles-additionalInfoText-3"
              classes={
                Object {
                  "alignCenter": "MuiTypography-alignCenter",
                  "alignJustify": "MuiTypography-alignJustify",
                  "alignLeft": "MuiTypography-alignLeft",
                  "alignRight": "MuiTypography-alignRight",
                  "body1": "MuiTypography-body1",
                  "body2": "MuiTypography-body2",
                  "button": "MuiTypography-button",
                  "caption": "MuiTypography-caption",
                  "colorError": "MuiTypography-colorError",
                  "colorInherit": "MuiTypography-colorInherit",
                  "colorPrimary": "MuiTypography-colorPrimary",
                  "colorSecondary": "MuiTypography-colorSecondary",
                  "colorTextPrimary": "MuiTypography-colorTextPrimary",
                  "colorTextSecondary": "MuiTypography-colorTextSecondary",
                  "displayBlock": "MuiTypography-displayBlock",
                  "displayInline": "MuiTypography-displayInline",
                  "gutterBottom": "MuiTypography-gutterBottom",
                  "h1": "MuiTypography-h1",
                  "h2": "MuiTypography-h2",
                  "h3": "MuiTypography-h3",
                  "h4": "MuiTypography-h4",
                  "h5": "MuiTypography-h5",
                  "h6": "MuiTypography-h6",
                  "noWrap": "MuiTypography-noWrap",
                  "overline": "MuiTypography-overline",
                  "paragraph": "MuiTypography-paragraph",
                  "root": "MuiTypography-root",
                  "srOnly": "MuiTypography-srOnly",
                  "subtitle1": "MuiTypography-subtitle1",
                  "subtitle2": "MuiTypography-subtitle2",
                }
              }
            >
              <p
                className="MuiTypography-root makeStyles-additionalInfoText-3 MuiTypography-body1"
              >
                1018
                 hpa
              </p>
            </ForwardRef(Typography)>
          </WithStyles(ForwardRef(Typography))>
        </div>
      </div>
    </div>
  </WeatherBlock>
</Provider>
`;

exports[`Forecast for locale, day and utc offset renders WeatherGraph correctly for differentLocale 1`] = `
Object {
  "children": <Unknown
    data={
      Array [
        Object {
          "clouds": Object {
            "all": 100,
          },
          "dt": 1593259200,
          "dt_txt": "2020-06-27 12:00:00",
          "main": Object {
            "feels_like": 280.48,
            "grnd_level": 1019,
            "humidity": 82,
            "pressure": 1022,
            "sea_level": 1023,
            "temp": 282.86,
            "temp_kf": -1.54,
            "temp_max": 284.4,
            "temp_min": 282.86,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04d",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 159,
            "speed": 2.34,
          },
        },
        Object {
          "clouds": Object {
            "all": 85,
          },
          "dt": 1593270000,
          "dt_txt": "2020-06-27 15:00:00",
          "main": Object {
            "feels_like": 283.2,
            "grnd_level": 1018,
            "humidity": 63,
            "pressure": 1022,
            "sea_level": 1022,
            "temp": 286.24,
            "temp_kf": -1.34,
            "temp_max": 287.58,
            "temp_min": 286.24,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04d",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 114,
            "speed": 3.1,
          },
        },
        Object {
          "clouds": Object {
            "all": 70,
          },
          "dt": 1593280800,
          "dt_txt": "2020-06-27 18:00:00",
          "main": Object {
            "feels_like": 284.61,
            "grnd_level": 1018,
            "humidity": 55,
            "pressure": 1021,
            "sea_level": 1021,
            "temp": 288.05,
            "temp_kf": -0.46,
            "temp_max": 288.51,
            "temp_min": 288.05,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "broken clouds",
              "icon": "04d",
              "id": 803,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 154,
            "speed": 3.59,
          },
        },
        Object {
          "clouds": Object {
            "all": 59,
          },
          "dt": 1593291600,
          "dt_txt": "2020-06-27 21:00:00",
          "main": Object {
            "feels_like": 282.86,
            "grnd_level": 1019,
            "humidity": 59,
            "pressure": 1022,
            "sea_level": 1022,
            "temp": 286.35,
            "temp_kf": -0.04,
            "temp_max": 286.39,
            "temp_min": 286.35,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "broken clouds",
              "icon": "04n",
              "id": 803,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 163,
            "speed": 3.49,
          },
        },
        Object {
          "clouds": Object {
            "all": 52,
          },
          "dt": 1593302400,
          "dt_txt": "2020-06-28 00:00:00",
          "main": Object {
            "feels_like": 282.33,
            "grnd_level": 1020,
            "humidity": 64,
            "pressure": 1024,
            "sea_level": 1024,
            "temp": 285.41,
            "temp_kf": 0,
            "temp_max": 285.41,
            "temp_min": 285.41,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "broken clouds",
              "icon": "04n",
              "id": 803,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 155,
            "speed": 2.98,
          },
        },
      ]
    }
    utcOffset={-10800}
  />,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`Forecast for locale, day and utc offset renders WeatherGraph correctly for differentLocale 2`] = `
Array [
  "09:00",
  "12:00",
  "15:00",
  "18:00",
  "21:00",
]
`;

exports[`Forecast for locale, day and utc offset renders WeatherGraph correctly for differentLocale 3`] = `
Object {
  "children": <Unknown
    data={
      Array [
        Object {
          "clouds": Object {
            "all": 10,
          },
          "dt": 1593313200,
          "dt_txt": "2020-06-28 03:00:00",
          "main": Object {
            "feels_like": 281.66,
            "grnd_level": 1020,
            "humidity": 68,
            "pressure": 1024,
            "sea_level": 1024,
            "temp": 284.45,
            "temp_kf": 0,
            "temp_max": 284.45,
            "temp_min": 284.45,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "clear sky",
              "icon": "01n",
              "id": 800,
              "main": "Clear",
            },
          ],
          "wind": Object {
            "deg": 156,
            "speed": 2.56,
          },
        },
        Object {
          "clouds": Object {
            "all": 17,
          },
          "dt": 1593324000,
          "dt_txt": "2020-06-28 06:00:00",
          "main": Object {
            "feels_like": 281.23,
            "grnd_level": 1020,
            "humidity": 73,
            "pressure": 1024,
            "sea_level": 1024,
            "temp": 283.34,
            "temp_kf": 0,
            "temp_max": 283.34,
            "temp_min": 283.34,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "few clouds",
              "icon": "02n",
              "id": 801,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 195,
            "speed": 1.57,
          },
        },
        Object {
          "clouds": Object {
            "all": 86,
          },
          "dt": 1593334800,
          "dt_txt": "2020-06-28 09:00:00",
          "main": Object {
            "feels_like": 280.74,
            "grnd_level": 1020,
            "humidity": 77,
            "pressure": 1024,
            "sea_level": 1024,
            "temp": 282.82,
            "temp_kf": 0,
            "temp_max": 282.82,
            "temp_min": 282.82,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04n",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 190,
            "speed": 1.61,
          },
        },
        Object {
          "clouds": Object {
            "all": 93,
          },
          "dt": 1593345600,
          "dt_txt": "2020-06-28 12:00:00",
          "main": Object {
            "feels_like": 282.87,
            "grnd_level": 1022,
            "humidity": 72,
            "pressure": 1026,
            "sea_level": 1026,
            "temp": 284.47,
            "temp_kf": 0,
            "temp_max": 284.47,
            "temp_min": 284.47,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04d",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 147,
            "speed": 1.12,
          },
        },
        Object {
          "clouds": Object {
            "all": 19,
          },
          "dt": 1593356400,
          "dt_txt": "2020-06-28 15:00:00",
          "main": Object {
            "feels_like": 285.32,
            "grnd_level": 1021,
            "humidity": 55,
            "pressure": 1025,
            "sea_level": 1025,
            "temp": 288.08,
            "temp_kf": 0,
            "temp_max": 288.08,
            "temp_min": 288.08,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "few clouds",
              "icon": "02d",
              "id": 801,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 140,
            "speed": 2.62,
          },
        },
        Object {
          "clouds": Object {
            "all": 21,
          },
          "dt": 1593367200,
          "dt_txt": "2020-06-28 18:00:00",
          "main": Object {
            "feels_like": 285.14,
            "grnd_level": 1020,
            "humidity": 51,
            "pressure": 1023,
            "sea_level": 1023,
            "temp": 288.92,
            "temp_kf": 0,
            "temp_max": 288.92,
            "temp_min": 288.92,
          },
          "sys": Object {
            "pod": "d",
          },
          "weather": Array [
            Object {
              "description": "few clouds",
              "icon": "02d",
              "id": 801,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 139,
            "speed": 3.98,
          },
        },
        Object {
          "clouds": Object {
            "all": 100,
          },
          "dt": 1593378000,
          "dt_txt": "2020-06-28 21:00:00",
          "main": Object {
            "feels_like": 283.05,
            "grnd_level": 1020,
            "humidity": 60,
            "pressure": 1024,
            "sea_level": 1024,
            "temp": 286.68,
            "temp_kf": 0,
            "temp_max": 286.68,
            "temp_min": 286.68,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04n",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 129,
            "speed": 3.85,
          },
        },
        Object {
          "clouds": Object {
            "all": 100,
          },
          "dt": 1593388800,
          "dt_txt": "2020-06-29 00:00:00",
          "main": Object {
            "feels_like": 281.76,
            "grnd_level": 1021,
            "humidity": 62,
            "pressure": 1025,
            "sea_level": 1025,
            "temp": 285.78,
            "temp_kf": 0,
            "temp_max": 285.78,
            "temp_min": 285.78,
          },
          "sys": Object {
            "pod": "n",
          },
          "weather": Array [
            Object {
              "description": "overcast clouds",
              "icon": "04n",
              "id": 804,
              "main": "Clouds",
            },
          ],
          "wind": Object {
            "deg": 110,
            "speed": 4.29,
          },
        },
      ]
    }
    utcOffset={-10800}
  />,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`Forecast for locale, day and utc offset renders WeatherGraph correctly for differentLocale 4`] = `
Array [
  "00:00",
  "03:00",
  "06:00",
  "09:00",
  "12:00",
  "15:00",
  "18:00",
  "21:00",
]
`;
